--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+   "homepage": "https://<your-Joann-jk>.github.io/mace-notes-rr",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+
+
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
